<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#C34C4C"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="274dp"
        android:layout_height="29dp"
        android:text="@string/pokemon_team_assemble"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="208dp"
        android:layout_height="230dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/ivPikachu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/btAssemble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="84dp"
        android:backgroundTint="#242323"
        android:text="@string/assemble"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btTeams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#242323"
        android:text="@string/teams"
        android:textColorLink="#000000"
        app:iconTint="#4B2D2D"
        app:layout_constraintEnd_toStartOf="@+id/btAssemble"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>