<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AssembleActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#E92121"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/etTeamNumber"
        android:layout_width="62dp"
        android:layout_height="49dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="56dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:text="@string/_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvTeamOf"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btRandom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#242323"
        android:text="@string/random"
        app:layout_constraintBottom_toTopOf="@+id/rvPokemon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPokemon"
        android:layout_width="0dp"
        android:layout_height="597dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTeamOf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/team_of"
        app:layout_constraintStart_toEndOf="@+id/btRandom"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageButton
        android:id="@+id/ibFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:contentDescription="@string/_2"
        android:src="@android:drawable/btn_star_big_on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etTeamNumber"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
</androidx.constraintlayout.widget.ConstraintLayout>